# wanted-jjh

./: .gitignore  Dockerfile  README.md  deploy_local.sh  init_db_local_container.sh  pyproject.toml
data/: setup_init_db.py
src/wanted_jjh/: cli.py  enums.py  exceptions.py  main.py  routes.py  settings.py
src/wanted_jjh/db/: session.py
src/wanted_jjh/dtos/: company.py
src/wanted_jjh/models/: company.py  company_tag.py
src/wanted_jjh/routers/: company.py
src/wanted_jjh/schemas/: company.py
src/wanted_jjh/services/: company.py
tests/: conftest.py  test_api.py
